[package]
name = "solana-genesis-utils"
version = "1.8.14"
description = "Solana Genesis Utils"
authors = ["Solana Maintainers <maintainers@solana.foundation>"]
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
documentation = "https://docs.rs/solana-download-utils"
edition = "2018"

[dependencies]
solana-sdk = { git = "https://github.com/solindex/sdk.git", version = "=1.8.14" }
solana-download-utils = { git = "https://github.com/solindex/download-utils.git", version = "=1.8.14" }
solana-runtime = { git = "https://github.com/solindex/runtime.git", version = "=1.8.14" }

[lib]
crate-type = ["lib"]
name = "solana_genesis_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
